Angular-application/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: NodePort # Or NodePort
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
